extracting features takes too much time

--- a/cyber_server/website_benign/link_vulnirable.ipynb
+++ b/cyber_server/website_benign/link_vulnirable.ipynb
@@ -1,8 +1,26 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Building Model for Website security prediction\n",
+    "\n",
+    "## Dataset:\n",
+    "- [Dataset of Malicious and Benign Webpages](https://data.mendeley.com/datasets/gdx3pkwp47/1)\n",
+    "\n",
+    "Singh, AK (2020), “Dataset of Malicious and Benign Webpages”, Mendeley Data, V1, doi: 10.17632/gdx3pkwp47.1\n",
+    "\n",
+    "## Preprocessing and feature extraction:\n",
+    "- Since the dataset is very huge and imbalanced, we have taken only 3000 samples from each class so total 6000 dataset avalable.\n",
+    "- We considered only the label and the url column for our model building.\n",
+    "- Since this dataset is for webpages we removed the path and only considered the domain name for our model building.\n",
+    "- We pass each url to our scanning function to scan for vulnerabilities where they are the features"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +174,7 @@
        "4  Levant, also monsignor georges. In 1800, lists...  good  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +233,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +265,7 @@
        "Name: count, Length: 1171470, dtype: int64"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +431,7 @@
        "4         http://us.imdb.com  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -437,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -464,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -491,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +521,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -514,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -522,7 +540,7 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Index: 36526 entries, 585006 to 1199910\n",
+      "Index: 36526 entries, 976874 to 1199910\n",
       "Data columns (total 2 columns):\n",
       " #   Column    Non-Null Count  Dtype \n",
       "---  ------    --------------  ----- \n",
@@ -544,22 +562,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "base_url    1\n",
-       "label       0\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# check for null values\n",
     "dataset.isnull().sum()\n",
@@ -570,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -578,12 +583,12 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Index: 36526 entries, 585006 to 1199910\n",
+      "Index: 36525 entries, 976874 to 1199910\n",
       "Data columns (total 2 columns):\n",
       " #   Column    Non-Null Count  Dtype \n",
       "---  ------    --------------  ----- \n",
       " 0   base_url  36525 non-null  object\n",
-      " 1   label     36526 non-null  object\n",
+      " 1   label     36525 non-null  object\n",
       "dtypes: object(2)\n",
       "memory usage: 856.1+ KB\n"
      ]
@@ -592,6 +597,162 @@
    "source": [
     "# the final dataset\n",
     "dataset.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1000 entries, 0 to 999\n",
+      "Data columns (total 2 columns):\n",
+      " #   Column    Non-Null Count  Dtype \n",
+      "---  ------    --------------  ----- \n",
+      " 0   base_url  1000 non-null   object\n",
+      " 1   label     1000 non-null   object\n",
+      "dtypes: object(2)\n",
+      "memory usage: 15.8+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "# reduce the dataset more and keep only 6000 url from both good and bad\n",
+    "dataset_good = dataset[dataset[\"label\"] == \"good\"]\n",
+    "dataset_bad = dataset[dataset[\"label\"] == \"bad\"]\n",
+    "\n",
+    "# keep only 3000 url on each dataset\n",
+    "dataset = pd.concat([dataset_good[:500], dataset_bad[:500]])\n",
+    "\n",
+    "# shuffle the dataset\n",
+    "dataset = dataset.sample(frac=1).reset_index(drop=True)\n",
+    "\n",
+    "dataset.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from vulner import *\n",
+    "\n",
+    "vulnerability_checks = {\n",
+    "    \"SQL Injection\": is_sql_injection_check,\n",
+    "    \"Cross-Site Scripting (XSS)\": is_xss_vulnerable,\n",
+    "    \"Command Injection\": is_command_injection_vulnerable,\n",
+    "    \"Remote File Inclusion Vulnerability\": is_remote_file_inclusion_vulnerable,\n",
+    "    \"Server-Side Request Forgery (SSRF)\": is_ssrf_vulnerable,\n",
+    "    \"Unvalidated Redirect Vulnerability\": is_unvalidated_redirect_vulnerable,\n",
+    "    \"Cross-Site Request Forgery (CSRF) Vulnerability\": is_csrf_vulnerable,\n",
+    "    \"Remote Code Execution (RCE) Vulnerability\": is_rce_vulnerable,\n",
+    "    \"Cross-Site Script Inclusion (XSSI) Vulnerability\": is_xssi_vulnerable,\n",
+    "    \"File Upload Vulnerability\": is_file_upload_vulnerable,\n",
+    "    \"Insecure Direct  (IDOR)\": is_idor_vulnerable,\n",
+    "    \"XML External Entity (XXE) Vulnerability\": is_xxe_vulnerable,\n",
+    "    \"Server-Side Template Injection (SSTI) Vulnerability\": is_ssti_vulnerable,\n",
+    "    \"Remote Code Inclusion (RCI) Vulnerability\": is_rci_vulnerable,\n",
+    "    \"Server-Side Template Injection (SSTI)\": is_ssti_templating_vulnerable,\n",
+    "    \"Insecure Deserialization\": is_insecure_deserialization_vulnerable,\n",
+    "    \"Server-Side Request\": is_ssrf_dns_rebinding_vulnerable,\n",
+    "    \"Clickjacking Vulnerability\": is_clickjacking_vulnerable,\n",
+    "    \"Security Misconfiguration\": is_security_misconfiguration_vulnerable,\n",
+    "    \"Cross-Site Scripting\": is_dom_based_xss_vulnerable,\n",
+    "    \"Open Redirect Vulnerability\": check_open_redirect,\n",
+    "    \"Cross-Origin Resource\": check_cors_misconfiguration,\n",
+    "    \"Cross-Site Script\": is_xssi_json_vulnerable,\n",
+    "    \"Content Security Policy\": is_csp_bypass_vulnerable,\n",
+    "    \"Insecure Cross-Origin\": is_insecure_cors_configured,\n",
+    "    \"HTTP Parameter Pollution Vulnerability\": check_http_parameter_pollution,\n",
+    "    \"Insufficient Transport\": check_transport_layer_protection,\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# try for few examples create an array to store the result where is it true or false or fail\n",
+    "# result = []\n",
+    "# for i in dataset['base_url'].head():\n",
+    "#     url = i\n",
+    "#     subresult = []\n",
+    "#     print(i)\n",
+    "#     print('------------------')\n",
+    "#     for key, check in vulnerability_checks.items():\n",
+    "#         try:\n",
+    "#             subresult.append(check(url))\n",
+    "#         except:\n",
+    "#             subresult.append('fail')\n",
+    "#     print(subresult)\n",
+    "#     result.append(subresult)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     bad\n",
+       "1     bad\n",
+       "2    good\n",
+       "3    good\n",
+       "4     bad\n",
+       "Name: label, dtype: object"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset['label'].head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SQL Injection Vulnerability Detected!\n",
+      "SQL Injection Vulnerability Detected!\n",
+      "SQL Injection Vulnerability Detected!\n",
+      "SQL Injection Vulnerability Detected!\n",
+      "SQL Injection Vulnerability Detected!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# apply these functions to each row in the dataset\n",
+    "for key, check in vulnerability_checks.items():\n",
+    "    # iterate through each row in the dataset\n",
+    "    for index, row in dataset.iterrows():\n",
+    "        # get the url\n",
+    "        url = row['base_url']\n",
+    "        # check the url\n",
+    "        try:\n",
+    "            dataset.loc[index, key] = check(url)\n",
+    "        except:\n",
+    "            # delete that row\n",
+    "            dataset.drop(index, inplace=True)\n",
+    "            continue\n",
+    "\n",
+    "dataset.head()"
    ]
   }
  ],
